# ymb-ai-bot

./: Cargo.toml  Dockerfile  README.md
documents/: calendar_concepts.md  event_summary_guidelines.md  locations.md  ymb.md
prompts/: calendar_preamble.txt
src/: app.rs  errors.rs  logger.rs  main.rs
src/routes/: events.rs  message.rs  mod.rs
src/utils/: calendar.rs  calendar_agent.rs  firebase.rs  generate_message.rs  mod.rs  rig_agent.rs
