[package]
name = "text_classifier_extractor"
version = "0.1.0"
edition = "2021"
 
[dependencies]
rig-core = "0.6.0" # [Rig Crate](https://crates.io/crates/rig-core)
tokio = { version = "1.34.0", features = ["full"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "cache", "model", "http"] }
dotenv = "0.15.0"
anyhow = "1.0.75"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
async-trait = "0.1.83"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
jsonwebtoken = "9.3"
bcrypt = "0.16.0"
wither = "0.9.0"
bson = "2.13.0"
config = "0.15.4"
once_cell = "1.20.2"
thiserror = "2.0.9"
